--- a/dibujo.html
+++ b/dibujo.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <title>Dibujando con canvas</title>
   </head>
-  <body>
+  <body
     <h1>Dibujo en canvas</h1>
+    <p>
+      Cuantas lineas quieres
+      <input type="text" id="texto_lineas" />
+      <input type="button" value="A darle!" id="botoncito" />
+    </p>
     <canvas width="300" height="300" id="dibujito"></canvas>
     <p>asi queda tu dibujo</p>
     <script src="dibujo.js"></script>
